
ADDED:

CHANGED:

* Replace default favicon with one that does not have the letters "CS" in it.

DEPRECATED:

REMOVED:

FIXED:

* 'js_files' now preserves the order of its arguments.

* Fixed an issue with Microsoft Edge not accepting button presses.

* Fixed an issue with the default handler's timer not properly synchronizing
  with the server's time.

SECURITY:

DOCUMENTATION:

##################
# Version 13.0.0 #
##################

ADDED:

* Added the <tableofcontents/> tag, which produces a table of contents for a
  page.

* Added support for question types to have a 'js_files' function that returns a
  list of Javsacript files that should be loaded before rendering the question.

* The decimal precision of numbers in the 'expression' question type can now be
  altered via the 'csq_precision' variable.

* Added the 'multiexpression' question type for questions about multiple
  related expressions.

* Made CAT-SOOP work properly with LibreJS
  (https://www.gnu.org/software/librejs/).

* Added support for Python sandboxing via bubblewrap
  (https://github.com/projectatomic/bubblewrap)

* The 'cs_question_type_defaults' variable can be used to set default values of
  variables for specific question types.

* The 'catsoop.check' module is now available.  It provides access to a small
  library of common check functions (to be used as 'csq_check_function' or
  similar).  It is accessible during normal page loads as 'csm_check'.

* CAT-SOOP can now optionally encrypt log entries, with keys specified via
  'cs_log_encryption_passphrase' and 'cs_log_encryption_salt'

* CAT-SOOP can now optionally compress log entries, by setting
  'cs_log_compression' = True.

* Added support for Python 3.7.

CHANGED:

* Updated KaTeX to version 0.10.0-rc.1.

* Updated MathJax to version 2.7.5.

* Updated highlight.js to version 9.12.0.

* The location and format in which uploaded files are stored on disk as changed.
