@@ -23,6 +23,8 @@ FIXED:
 * Fixed an issue with the default handler's timer not properly synchronizing
   with the server's time.
 
+* Fixed an type issue related to mpmath objects in numpy arrays.
+
 SECURITY:
 
 DOCUMENTATION:
